--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ body {
     font-weight: 300;
     position: relative;
     height: 100vh;
-    color: #555;
+    color: #555
 }
 
 .wrapper {
@@ -86,7 +86,7 @@ body {
     margin-bottom: 130px;
 }
 
-.active { background-color: #f7f7f7; }
+.active { background-color: #ebe6e6; }
 .active .player-name { font-weight: 300; }
 
 .active .player-name::after {
